2007-09-17  Srinivasa Ragavan <sragavan@novell.com>

	* NEW, configure.in: Evolution Exchange 2.12 release

2007-09-17  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/e-book-backend-gal.c (start_book_view):
	* calendar/e-cal-backend-exchange.c:
	Fix recently introduced compiler warnings.

2007-09-10  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #295646 (Novell Bugzilla)

	* addressbook/e-book-backend-exchange.c:
	(e_book_backend_exchange_connect),
	(e_book_backend_exchange_authenticate_user): Use rescan subtree for
	personal hierarchy to get the newly created book.
	* calendar/e-cal-backend-exchange.c: (open_calendar): Use rescan
	subtree to get the newly created calendar.

2007-09-07  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #295558 (bnc)
	* calendar/e-cal-backend-exchange-calendar.c: (get_changed_events):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks): Sync 
	the changes with the cache if something fails in between while iterating
	through the response from the server.

2007-09-07  Srinivasa Ragavan  <sragavan@novell.com>
	
	** Fix for bug #295622 (Novell Bugzilla)

	* addressbook/e-book-backend-gal.c: (gal_reconnect),
	(start_book_view): Reconnect if the ldap is null.

2007-09-06  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug#308057 (Novell Bugzilla)

	* addressbook/e-book-backend-db-cache.c:
	(e_book_backend_db_cache_get_contacts): Use prepend instead of append.

2007-09-03  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.11.92 release

2007-08-30  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #467591 and bug #464404

	* addressbook/e-book-backend-exchange.c
	(e_book_backend_exchange_create_contact): Connect if there is no
	account before anything else.
	(e_book_backend_exchange_modify_contact):

2007-08-29  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #301263 (bnc)
	* calendar/e-cal-backend-exchange.c: (open_calendar):