@@ -1,3 +1,10 @@
+2007-09-27  Matthew Barnes  <mbarnes@redhat.com>
+
+	** Fixes bug #474000
+
+	* camel/camel-exchange-folder.c (find_parent):
+	Use GLib's Base64 API instead of Camel's.
+
 2007-09-17  Srinivasa Ragavan <sragavan@novell.com>
 
 	* NEW, configure.in: Evolution Exchange 2.12 release
